# huffman-coding

./: CMakeLists.txt  Makefile
src/: huffman.cpp  huffman.hpp  main.cpp  main.rs
src/huffman/: mod.rs
